--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .app {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 90%;
   margin: auto;
   padding: 10px;
+  gap: 25px;
 }
 .card-wrapper {
   width: 220px;
@@ -39,12 +41,17 @@
   font-weight: bold;
 }
 .header {
-  height: 50px;
+  min-height: 50px;
   width: 100%;
   background-color: black;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
+  padding: 5px;
+}
+.header > span {
   font-size: xx-large;
   font-weight: bold;
   color: red;
@@ -64,4 +71,16 @@
 .currentPage {
   background-color: black;
   color: white;
+}
+.selection-div {
+  display: flex;
+  gap: 10px;
+}
+.selection-div > span {
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+.mode-selection {
+  font-weight: 500 !important;
 }
